--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<main>
   		<p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
   
-  		<a href=""><img class="cat-image thick-pink-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
+  		<img class="cat-image pink-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
   
   		<div class="silver-background">
     		<p>Things cats love:</p>
