--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<h1 class="red-text">CatPhotoApp</h1>
 		</header>
 		<main>
-			<p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
+			<p class="red-text">Click here to view more <a href="images/Kitten.jpg">cat photos</a>.</p>
   
 			<img class="cat-image pink-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
   
